Fixed overflow issue and unwanted box shadow on dropdown

--- a/frontend/src/styles/elements/_select.scss
+++ b/frontend/src/styles/elements/_select.scss
@@ -11,6 +11,8 @@
 
     input {
       padding-left: 10px;
+      border: 0;
+      box-shadow: none;
     }
   }
 
